--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -23,10 +23,10 @@
     } 
     }
     
-    .navigation__logo {
+    //.navigation__logo {
     //margin-right: 93px;
     //display: block;
-    }
+    //}
     
     
     .menu__item .menu__link.current{
@@ -81,6 +81,7 @@
         display: flex;
         align-items: center;
         color: #757575;
+        font-size: 12px;
         gap: 10px;
     }
     }
@@ -104,6 +105,7 @@
         display: flex;
         align-items: center;
         color: #757575;
+        font-size: 12px;
         gap: 10px;
     }
     }
@@ -185,12 +187,6 @@
             width: 14px;
         height: 10px;
         }
-        @media screen and (min-width: 768px) {
-            fill: currentColor;
-            //margin-right: 10px;
-            width: 16px;
-            height: 12px; 
-        }
     }
     
     .icon__tell {
@@ -201,12 +197,6 @@
         @media screen and (min-width: 768px) {
             width: 10px;
         height: 14px;
-        }
-        @media screen and (min-width: 768px) {
-            fill: currentColor;
-            //margin-right: 10px;
-            width: 10px;
-            height: 16px; 
         }
     }
 
