--- a/sass/layouts/_footer-portfolio.scss
+++ b/sass/layouts/_footer-portfolio.scss
@@ -141,7 +141,7 @@
     .footer-top {
         @media screen and (min-width: 768px) {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     margin-bottom: 60px;
     }
     @media screen and (min-width: 1200px) {
