--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -160,7 +160,7 @@ margin-top: 20px;
     .footer-top {
         @media screen and (min-width: 768px) {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     margin-bottom: 60px;
     }
     @media screen and (min-width: 1200px) {
