--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -4,7 +4,7 @@
     padding-bottom: 118px;
     background-color: #c4c4c4;
     text-align: center;
-    //background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/background.mob.jpg);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/background.mob.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
