--- a/sass/components/_feature.scss
+++ b/sass/components/_feature.scss
@@ -28,6 +28,7 @@
     .feature__list {
     display: flex;
     gap: 30px;
+    flex-wrap: wrap;
     @media screen and (min-width: 480px) {
         flex-wrap: wrap;
         max-width: 480px;
@@ -67,16 +68,11 @@
     text-transform: uppercase;
     color: var(--title-main-color);
     margin-bottom: 10px;
-    width: 270px;
-    height: 16px;
-    @media screen and (min-width: 480px) {
-        margin: 0 auto;
-        margin-bottom: 10px;
-        font-weight: 700;
-        font-size: 14px;
-        line-height: 1.14;
-        text-align: center;
+    text-align: center;
+    @media screen and (min-width: 768px){
+        text-align: left;
     }
+
     }
 
 
