--- a/sass/layouts/_footer-portfolio.scss
+++ b/sass/layouts/_footer-portfolio.scss
@@ -118,17 +118,10 @@
         display: flex;
         flex-direction: column;
         text-align: center;
-     @media screen and (min-width: 480px) {
-        width: 480px;
-    }
-    @media screen and (min-width: 768px) {
-        width: 768px;
-    }
     @media screen and (min-width: 1200px) {
-        width: 1200px;
         flex-direction: row;
         margin: 0 auto;
-        justify-content: space-between;
+        gap:93px;
     }
     }
         
@@ -156,7 +149,7 @@
     }
     
     .followus {
-        display: inline-block;
+        display: block;
         //margin-bottom: 20px;
         font-weight: 700;
         font-size: 14px;
@@ -164,10 +157,11 @@
         letter-spacing: 0.03em;
         text-transform: uppercase;
         color:var(--main-color);
+        margin-bottom: 20px;
         @media screen and (min-width: 1200px) {
         text-align: left;
-        display: flex;
     }
+    
     }
     
     .btn-icon {
@@ -184,7 +178,6 @@
     .input-email {
         padding: 15px 16px;
         width: 450px;
-        margin: 20px 0;
         background-color: inherit;
         outline: transparent;
         border-radius: 4px;
@@ -220,6 +213,15 @@
             background-color: #188ce8;
             box-shadow: 0px 4px 4px rgb(0 0 0 / 15%);
         }
+        @media screen and (min-width: 480px) {
+            margin-top: 20px;
+        } 
+        @media screen and (min-width: 768px) {
+            margin-top: 20px;
+        } 
+        @media screen and (min-width: 1200px) {
+            margin-top: 0;
+        }          
     }
     
     
