--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -84,6 +84,10 @@
         font-size: 12px;
         gap: 10px;
     }
+    @media screen and (min-width:1200px) {
+        padding-top: 32px;
+        padding-bottom: 32px;
+    }
     }
     
     .tel__contact {
@@ -107,6 +111,10 @@
         color: #757575;
         font-size: 12px;
         gap: 10px;
+    }
+    @media screen and (min-width:1200px) {
+        padding-top: 32px;
+        padding-bottom: 32px;
     }
     }
 
@@ -184,8 +192,12 @@
         width: 16px;
         height: 12px;
         @media screen and (min-width: 768px) {
-            width: 14px;
+        width: 14px;
         height: 10px;
+        }
+        @media screen and (min-width: 768px) {
+        width: 16px;
+        height: 12px;
         }
     }
     
@@ -195,8 +207,12 @@
         width: 10px;
         height: 16px;
         @media screen and (min-width: 768px) {
-            width: 10px;
+        width: 10px;
         height: 14px;
+        }
+        @media screen and (min-width: 768px) {
+        width: 10px;
+        height: 16px;
         }
     }
 
@@ -296,6 +312,10 @@
         @media screen and (min-width: 480px) {
         font-size: 40px;
     }
+    }
+
+    .mob-menu__item .mob-menu__link.current{
+        color: var(--second-main-color);
     }
 
     .mob-connect {
