--- a/css/main.css
+++ b/css/main.css
@@ -871,6 +871,12 @@ textarea {
   padding-top: 94px;
   padding-bottom: 94px;
 }
+@media screen and (min-width: 768px) {
+  .team {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+}
 
 @media screen and (min-width: 480px) {
   .conteiner {
@@ -911,6 +917,7 @@ textarea {
 
 .team-item {
   background-color: var(--main-color);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 }
 @media screen and (min-width: 768px) {
   .team-item {
@@ -946,7 +953,6 @@ textarea {
 .content {
   padding-top: 30px;
   padding-bottom: 30px;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
 
@@ -1287,8 +1293,6 @@ span {
 
 .icon__mail {
   fill: currentColor;
-  width: 16px;
-  height: 12px;
 }
 @media screen and (min-width: 768px) {
   .icon__mail {
@@ -1296,7 +1300,7 @@ span {
     height: 10px;
   }
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1200px) {
   .icon__mail {
     width: 16px;
     height: 12px;
@@ -1305,8 +1309,6 @@ span {
 
 .icon__tell {
   fill: currentColor;
-  width: 10px;
-  height: 16px;
 }
 @media screen and (min-width: 768px) {
   .icon__tell {
@@ -1314,7 +1316,7 @@ span {
     height: 14px;
   }
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1200px) {
   .icon__tell {
     width: 10px;
     height: 16px;
