--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -189,13 +189,13 @@
     .icon__mail {
         fill: currentColor;
         //margin-right: 10px;
-        width: 16px;
-        height: 12px;
+        //width: 16px;
+        //height: 12px;
         @media screen and (min-width: 768px) {
         width: 14px;
         height: 10px;
         }
-        @media screen and (min-width: 768px) {
+        @media screen and (min-width: 1200px) {
         width: 16px;
         height: 12px;
         }
@@ -204,13 +204,13 @@
     .icon__tell {
         fill: currentColor;
         //margin-right: 10px;
-        width: 10px;
-        height: 16px;
+        //width: 10px;
+        //height: 16px;
         @media screen and (min-width: 768px) {
         width: 10px;
         height: 14px;
         }
-        @media screen and (min-width: 768px) {
+        @media screen and (min-width: 1200px) {
         width: 10px;
         height: 16px;
         }
