--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -2,6 +2,10 @@
     background-color: var(--background-third-color);
     padding-top: 94px;
     padding-bottom: 94px;
+    @media screen and (min-width: 768px) {
+        padding-top: 60px;
+    padding-bottom: 60px;
+    }
     }
 
 .conteiner {
@@ -36,6 +40,7 @@
     }
     .team-item {
         background-color: var(--main-color);
+        box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
         @media screen and (min-width: 768px) {
             width:calc((100% - 30px) / 2);
             align-items: center;
@@ -66,7 +71,6 @@
     .content {
         padding-top: 30px;
         padding-bottom: 30px;
-        box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
     }
     
