--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -11,7 +11,6 @@
 .conteiner {
     @media screen and (min-width: 480px) {
         width: 480px;
-        
     } 
     @media screen and (min-width: 768px) {
         width: 768px;
@@ -41,6 +40,11 @@
     .team-item {
         background-color: var(--main-color);
         box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+        @media screen and (max-width: 479px) {
+            width:calc((100% - 30px) / 1);
+            align-items: center;
+            justify-content: center;
+        }
         @media screen and (min-width: 768px) {
             width:calc((100% - 30px) / 2);
             align-items: center;
