--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -83,6 +83,10 @@ margin-top: 20px;
     
     .footer-soc{
         display: block;
+        @media screen and (max-width: 479px) {
+            margin-top: 60px;
+            margin-bottom: 60px;
+        }
         @media screen and (min-width: 480px) {
             margin-top: 60px;
             margin-bottom: 60px;
@@ -236,6 +240,9 @@ margin-top: 20px;
             background-color: #188ce8;
             box-shadow: 0px 4px 4px rgb(0 0 0 / 15%);
         }
+        @media screen and (max-width: 479px) {
+            margin-top: 20px;
+        } 
         @media screen and (min-width: 480px) {
             margin-top: 20px;
         } 
