--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -27,11 +27,13 @@
     text-align: center;
     letter-spacing: 0.03em;
     color: var(--title-main-color);
-    margin-bottom: 50px; 
+    margin-bottom: 30px;
     @media screen and (min-width: 1200px) {
         font-size: 36px;
+        margin-bottom: 50px;
     }
     }
+
     .team-list { 
         display: flex;
         flex-wrap: wrap;
@@ -41,7 +43,7 @@
         background-color: var(--main-color);
         box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
         @media screen and (max-width: 479px) {
-            width:calc((100% - 30px) / 1);
+            width:260px;
             align-items: center;
             justify-content: center;
         }
