--- a/sass/layouts/_footer-portfolio.scss
+++ b/sass/layouts/_footer-portfolio.scss
@@ -8,7 +8,6 @@
     align-items: baseline;
     }
     @media screen and (min-width: 1200px) {
-    width: 100vw;
     margin-left: auto;
     margin-right: auto;
     padding: 60px 0;
@@ -184,7 +183,10 @@
         border: 1px solid rgba(255, 255, 255, 0.3);
         filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
         color:var(--main-color);
-        @media screen and (min-width: 1199px) {
+        @media screen and (max-width: 479px) {
+            width: 270px;
+        }
+        @media screen and (min-width: 1200px) {
         width: 358px;
     }
     }
