--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -8,7 +8,6 @@ padding-bottom: 60px;
     align-items: baseline;
 }
 @media screen and (min-width: 1200px) {
-    width: 100vw;
     margin-left: auto;
     margin-right: auto;
     padding: 60px 0;
@@ -89,7 +88,6 @@ margin-top: 20px;
         }
         @media screen and (min-width: 480px) {
             margin-top: 60px;
-            margin-bottom: 60px;
         }
         @media screen and (min-width: 768px) {
         margin: 0;
@@ -171,6 +169,12 @@ margin-top: 20px;
         //margin-left: 93px;
         //display: flex;
         flex-wrap: wrap;
+        @media screen and (min-width: 480px) {
+            margin-top: 60px;
+        }
+        @media screen and (min-width: 1200px) {
+            margin-top: 0;
+        }
     }
 
     .followus {
@@ -208,6 +212,9 @@ margin-top: 20px;
         border: 1px solid rgba(255, 255, 255, 0.3);
         filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
         color:var(--main-color);
+        @media screen and (max-width: 479px) {
+            width: 270px;
+        }
         @media screen and (min-width: 480px) {
         width: 450px;
     }
