--- a/sass/layouts/_header-portfolio.scss
+++ b/sass/layouts/_header-portfolio.scss
@@ -2,7 +2,7 @@
     background-color: var(--main-color);
     border-bottom: 1px solid var(--border-header-line);
     }
-span {
+    span {
     font-family: 'Raleway', sans-serif;
     font-weight: 700;
     font-size: 26px;
@@ -11,7 +11,7 @@ span {
     color: var(--second-main-color);
     }
     
-    .header-logo {
+    .navigation__logo {
     font-family: 'Raleway', sans-serif;
     font-weight: 700;
     font-size: 26px;
@@ -19,18 +19,18 @@ span {
     letter-spacing: 0.03em;
     color: var(--logo-color);
     @media screen and (min-width: 480px) {
-        padding: 16px 0;
-    }   
+    padding: 16px 0;
+    } 
     }
     
-    .header-logo {
-    margin-right: 93px;
-    display: block;   
-    }
+    //.navigation__logo {
+    //margin-right: 93px;
+    //display: block;
+    //}
     
     
-    .header-item .menu__link.current {
-    color:var(--second-main-color)
+    .menu__item .menu__link.current{
+        color: var(--second-main-color);
     }
     
     .menu__link {
@@ -38,76 +38,355 @@ span {
     font-size: 14px;
     line-height: var(--secondtipical-lh);
     letter-spacing: 0.02em;
-    color: var(--head-color);
+    color: var(--title-main-color);
     padding-top: 32px;
     padding-bottom: 32px;
     display: flex;
-    align-items: center;
+    position: relative;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     &:hover,
     &:focus {
-    color: var(--second-main-color);
+        color: var(--second-main-color);
+    }
+    &.current.link::after {
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        content: '';
+        display: block;
+        width: 100%;
+        height: 4px;
+        border-radius: 2px;
+        margin-bottom: -1px;
+        background-color: var(--second-main-color);
     }
     }
     
-    .header-mail {
+    .mail__contact {
     font-weight: 500;
     font-size: 14px;
     line-height: var(--secondtipical-lh);
     letter-spacing: 0.02em;
-    color: var(--text-color);
-    padding-top: 32px;
-    padding-bottom: 32px;
-    display: flex;
-    align-items: center;
+    color: var(--main-text-color);
+   // padding-top: 32px;
+   // padding-bottom: 32px;
+    //display: flex;
+   // align-items: center;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     &:hover,
     &:focus {
-    color: var(--second-main-color);
+        color: var(--second-main-color);
+    }
+    @media screen and (min-width:768px) {
+        display: flex;
+        align-items: center;
+        color: #757575;
+        font-size: 12px;
+        gap: 10px;
+    }
+    @media screen and (min-width:1200px) {
+        font-weight: 500;
+    font-size: 14px;
+    line-height: var(--secondtipical-lh);
+    letter-spacing: 0.02em;
+    color: var(--main-text-color);
+        padding-top: 32px;
+        padding-bottom: 32px;
     }
     }
     
-    .header-tel {
+    .tel__contact {
     font-weight: 500;
     font-size: 14px;
     line-height: var(--secondtipical-lh);
     letter-spacing: 0.02em;
-    color: var(--text-color);
-    padding-top: 32px;
-    padding-bottom: 32px;
+    color: var(--main-text-color);
+    //padding-top: 32px;
+    //padding-bottom: 32px;
     display: flex;
+    align-items: center;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     &:hover,
     &:focus {
-    color: var(--second-main-color);
+        color: var(--second-main-color);
+    }
+    @media screen and (min-width:768px) {
+        display: flex;
+        align-items: center;
+        color: #757575;
+        font-size: 12px;
+        gap: 10px;
+    }
+    @media screen and (min-width:1200px) {
+        font-weight: 500;
+    font-size: 14px;
+    line-height: var(--secondtipical-lh);
+    letter-spacing: 0.02em;
+    color: var(--main-text-color);
+        padding-top: 32px;
+        padding-bottom: 32px;
+    }
+    }
+
+    .menu {
+        display: none;
+        align-items: center;
+        gap: 50px;
+        @media screen and (min-width: 768px) {
+        margin-left: 90px;
+        display: flex;
+        gap: 50px;
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 1.14;
+        letter-spacing: .02em;
+        color: #212121;
+    }
+    }
+
+    .menu__contacts {
+        display: none;
+        gap: 50px;
+        @media screen and (min-width: 768px) {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        font-weight: 500;
+        font-size: 12px;
+        line-height: 1.14;
+        letter-spacing: .02em;
+        color: #757575;
+        transition-property: background-color,fill;
+        transition-duration: 250ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    }
+        @media screen and (min-width: 1200px) {
+        flex-direction: row;
+        font-size: 14px;
+        line-height: 1.14;
+        gap: 30px;
     }
     }
     
-    
-    .header-list {
-    display: flex;
-    align-items: center;
-    gap: 50px;
+    .navigation {
+        display: flex;
+        align-items: center;
+        @media screen and (min-width: 768px) {
+        display: flex;
+    }
     }
     
-    .header-navigation {
-    display: flex;
-    align-items: center;
+    .header__container {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
     }
     
-    .header-conteiner {
-    display: flex;
-    align-items: center;
+    .conect {
+        display: flex;
+        margin-left: auto;
+    
     }
     
-    .header-conect {
-    margin-left: auto;
+    .connect {
+        margin-left: auto;
+        display: flex;
+        gap: 30px;
+        align-items: center;
     }
     
-    .header-connect-mail{
+    
+    .icon__mail {
+        fill: currentColor;
+        //margin-right: 10px;
+        //width: 16px;
+        //height: 12px;
+        @media screen and (min-width: 768px) {
+        width: 14px;
+        height: 10px;
+        }
+        @media screen and (min-width: 1200px) {
+        width: 16px;
         height: 12px;
+        }
     }
     
-    .header-connect-tell{
+    .icon__tell {
+        fill: currentColor;
+        //margin-right: 10px;
+        //width: 10px;
+        //height: 16px;
+        @media screen and (min-width: 768px) {
+        width: 10px;
+        height: 14px;
+        }
+        @media screen and (min-width: 1200px) {
+        width: 10px;
         height: 16px;
+        }
+    }
+
+    .menu__icon__open{
+        margin-left: auto;
+        border: none;
+        background-color: rgba(0,0,0,0);
+        cursor: pointer;
+        transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        fill: currentColor;
+        &:hover,
+        &:focus {
+        fill: var(--second-main-color);
+    }    
+        @media screen and (min-width: 768px) {
+        display: none;
+    }    
+    }
+
+    .mob-menu {
+        position: fixed;
+        top: 0;
+        background-color:var(--main-color);
+        width: 100vw;
+        height: 100vh;
+        z-index: 2;
+        padding: 40px 10px;
+        @media screen and (min-width: 480px) {
+        padding: 48px 40px;
+    }
+    }
+    
+    .mob-menu>.container {
+        height: 90%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        overflow: auto;
+        @media screen and (min-width: 480px) {
+        height: 100%;
+    }
+    }
+
+    .mob-btn {
+        position: absolute;
+        background-color: rgba(0,0,0,0);
+        border: flex;
+        top: 1px;
+        right: 16px;
+        display: block;
+        margin-left: 0;
+        fill: currentColor;
+        cursor: pointer;
+        transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        &:hover,
+        &:focus {
+        fill: var(--second-main-color);
+    }    
+        @media screen and (min-width: 480px) {
+        top: 10px;
+        right: 15px;
+    }    
+    }
+
+    .mob-btn {
+        margin-left: auto;
+        display: block;
+        border-color: transparent;
+        border: none;
+    }
+
+    
+    
+    .mob-menu__list {
+        margin-bottom: 50px;
+    }
+
+    .mob-menu__item:not(:last-child) {
+        margin-bottom: 25px;
+        @media screen and (min-width: 480px){
+        margin-bottom: 32px;
+    }
+    }
+    .mob-menu__link {
+        font-family: "Roboto";
+        font-style: normal;
+        font-weight: 500;
+        font-size: 30px;
+        line-height: 1.17;
+        letter-spacing: .02em;
+        color: #212121;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        &:hover,
+        &:focus {
+        color: var(--second-main-color);
+    }    
+        @media screen and (min-width: 480px) {
+        font-size: 40px;
+    }
+    }
+
+    .mob-menu__item .mob-menu__link.current{
+        color: var(--second-main-color);
+    }
+
+    .mob-connect {
+        margin-bottom: 50px;
+        @media screen and (min-width: 480px) {
+        margin-bottom: 64px;
+    }
+    }
+    
+    .mob-mail__contact {
+        display: block;
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 1.17;
+    letter-spacing: .02em;
+    color: #757575;
+    padding-top: 32px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover,
+    &:focus {
+    color: var(--second-main-color);
+    }
+    }
+    .mob-tel__contact {
+        font-family: "Roboto";
+        font-style: normal;
+        font-weight: 500;
+        font-size: 30px;
+        line-height: 1.17;
+        letter-spacing: .02em;
+        color: #188ce8;
+        @media screen and (min-width: 480px) {
+        font-size: 34px;
+}
+    }
+    .mob__soc-list {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 10px;
+    }
+
+    .mob__soc-link {
+        font-family: "Roboto";
+        font-style: normal;
+        font-weight: 500;
+        font-size: 15px;
+        line-height: 1.22;
+        letter-spacing: .02em;
+        color: #188ce8;
+        @media screen and (min-width: 480px) {
+        font-size: 18px;
+    }
+    }
+   
+    .mob__soc-line::before {
+        content: "";
+        border: 1px solid rgba(33,33,33,.2);
+        background-color: rgba(33,33,33,.2);
+        height: 1px;
+        width: 22px;
+        margin-right: 10px;
     }
